Add install details

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,23 @@
 cmake_minimum_required( VERSION 3.5.0 )
 
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY build/)
-
+SET(CMAKE_INSTALL_PREFIX, out)
 
 file(GLOB AllSources src/*.c)
+file(GLOB AllHeaders src/*.h)
 file(GLOB TestSources tests/*.c)
 
-add_library(thelib ${AllSources})
+add_library(lgc_lib ${AllSources} src/allocator.h)
+
+install(TARGETS lgc_lib DESTINATION lib)
+install(FILES ${AllHeaders} DESTINATION include)
 
 enable_testing()
 foreach(testSrc ${TestSources})
   get_filename_component(testName ${testSrc} NAME_WE)
 
   add_executable(${testName} ${testSrc})
-  target_link_libraries(${testName} thelib)
+  target_link_libraries(${testName} lgc_lib)
 
   add_test(${testName} ${testName})
 endforeach(testSrc)
