--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required( VERSION 2.7.0 )
 
+SET (CMAKE_C_FLAGS "--std=gnu99 ${CMAKE_C_FLAGS}")
+
+
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY build/)
 SET(CMAKE_INSTALL_PREFIX, out)
 
