--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
-cmake_minimum_required( VERSION 3.5.0 )
+cmake_minimum_required( VERSION 2.7.0 )
+
+SET (CMAKE_C_FLAGS "--std=gnu99 ${CMAKE_C_FLAGS}")
+
 
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY build/)
 SET(CMAKE_INSTALL_PREFIX, out)
